--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <!-- Mirrored from technext.github.io/clark/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 23 Nov 2022 16:18:25 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
-    <title>Rokon </title>
+    <title>Rokon |A Freelance Web Developer </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="keywords" content="Freelance Web Developer, Web Developer, Laravel Developer, PHP Developer, cheapest web developer, best web developer, fast delivery web developer, web application developer">
+    <meta name="desciption" content="I'm A Freelance Web Developer; WatsApp # +8801717524792.">
     
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
@@ -197,7 +199,7 @@
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Services</h1>
             <h2 class="mb-4">Services</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+            <!--<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>-->
           </div>
         </div>
     		<div class="row">
@@ -273,7 +275,7 @@
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Skills</h1>
             <h2 class="mb-4">My Skills</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+           <!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>-->
           </div>
         </div>
 				<div class="row">
@@ -517,7 +519,7 @@
             <div class="block-18">
               <div class="text">
                 <strong class="number" data-number="500">0</strong>
-                <span>Cups of coffee</span>
+                <span>Web App</span>
               </div>
             </div>
           </div>
@@ -572,7 +574,7 @@
           			<span class="icon-paper-plane"></span>
           		</div>
           		<h3 class="mb-4">Email Address</h3>
-	            <p><a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
+	            <p><a href="mailto:rezaulkrm85@gmail.com">rezaulkrm85@gmail.com</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -698,7 +700,7 @@ function submitForm(){
 	              <ul>
 	                <li><span class="icon icon-map-marker"></span><span class="text">Sonaton, Haragach, Rangpur Bangladesh</span></li>
 	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+880- 171 7524 792</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">rezaulkrm@gmail.com</span></a></li>
+	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">rezaulkrm85@gmail.com</span></a></li>
 	              </ul>
 	            </div>
             </div>
@@ -738,5 +740,5 @@ function submitForm(){
     
   </body>
 
-<!-- Mirrored from technext.github.io/clark/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 23 Nov 2022 16:18:39 GMT -->
+
 </html>
