--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   
-<!-- Mirrored from technext.github.io/clark/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 23 Nov 2022 16:18:25 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <head>
     <title>Rokon |A Freelance Web Developer </title>
     <meta charset="utf-8">
@@ -199,7 +198,7 @@
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Services</h1>
             <h2 class="mb-4">Services</h2>
-            <!--<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>-->
+            <p>I am helping my clients to create a website, web application, fix any issues, bugs with PHP , Laravel  website and web application .</p>
           </div>
         </div>
     		<div class="row">
@@ -275,7 +274,7 @@
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Skills</h1>
             <h2 class="mb-4">My Skills</h2>
-           <!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>-->
+           <p>I have experience in creating ecommerce websites. I have experience in php, html, java script, ajex, bootstrap, css. My ultimately goal is to provide you with 100% customer satisfaction guaranteed.</p>
           </div>
         </div>
 				<div class="row">
@@ -532,7 +531,7 @@
 				<div class="row justify-content-center">
 					<div class="col-md-7 ftco-animate text-center">
 						<h2>I'm <span>Available</span> for freelancing</h2>
-						<!--<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>-->
+						<p>I can design and develop the custom website according to your requirement or Customize  or redesign your existing once by using php ,html, css, javascript, bootstrap ajex or anyother if needed .</p>
 						<p class="mb-0"><a href="#rokon-section" class="btn btn-primary py-3 px-4">Hire me</a></p>
 					</div>
 				</div>
@@ -545,7 +544,7 @@
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2">Contact</h1>
             <h2 class="mb-4">Contact Me</h2>
-            <!--<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>-->
+          <p>I am a Full stack PHP developer.I am helping my clients to create a web application.</p>
           </div>
         </div>
 
@@ -661,7 +660,8 @@ function submitForm(){
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">About</h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+              <p>I'm a full-stack PHP, Larvel developer with over 4 years of experience in web development.I specialize in creating clean well SEO structured and Speed Optimized. I can create a professional website for you, so I assure you I will implement with the best job.</p>
+			  <p>I'll Help you build your website with PHP, Laravel and also fix all the problems and errors on your existing websites. I can also create an web application from scratch according to your custom requirements and add new features to your existing PHP web applications.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="https://twitter.com/Rokon14"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="https://www.facebook.com/rezaulkarim.rokon"><span class="icon-facebook"></span></a></li>
