--- a/index.html
+++ b/index.html
@@ -660,8 +660,8 @@ function submitForm(){
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">About</h2>
-              <p>I'm a full-stack PHP, Larvel developer with over 4 years of experience in web development.I specialize in creating clean well SEO structured and Speed Optimized. I can create a professional website for you, so I assure you I will implement with the best job.</p>
-			  <p>I'll Help you build your website with PHP, Laravel and also fix all the problems and errors on your existing websites. I can also create an web application from scratch according to your custom requirements and add new features to your existing PHP web applications.</p>
+              <p>I'm a full-stack PHP, Larvel developer with over 4 years of experience in web development.I specialize in creating clean well SEO structured and Speed Optimized. I can create a professional website for you.</p>
+			 
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="https://twitter.com/Rokon14"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="https://www.facebook.com/rezaulkarim.rokon"><span class="icon-facebook"></span></a></li>
