--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
     <title>Rokon |A Freelance Web Developer </title>
     <meta charset="utf-8">
+	<meta name="google-site-verification" content="6ag7WvonV5bTv6YAHeMF-9K1SLin_sw9YqyhvEf99gQ" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="keywords" content="Freelance Web Developer, Web Developer, Laravel Developer, PHP Developer, cheapest web developer, best web developer, fast delivery web developer, web application developer">
     <meta name="desciption" content="I'm A Freelance Web Developer; WatsApp # +8801717524792.">
