--- a/index.html
+++ b/index.html
@@ -588,46 +588,40 @@
           </div>
         </div>
        </section>
-	    <!-- loader 
+	    <?php
+            $message1 = "";
+            if(isset($_POST['SubmitButton'])){ //check if form was submitted
+			  if( isset($_POST['Name']) && isset($_POST['Email']) && isset($_POST['Message']) ){
+	             $n = $_POST['Name']; // HINT: use preg_replace() to filter the data
+	             $e = $_POST['Email'];
+	             $m = nl2br($_POST['Message']);
+	             $to = "rezaulkrm85@gmail.com";	
+	             $from = $e;
+	             $subject = $_POST['Subject'];
+	             $message = '<b>Name:</b> '.$n.' <br><b>Email:</b> '.$e.' <p>'.$m.'</p>';
+	             $headers = "From: $from\n";
+	             $headers .= "MIME-Version: 1.0\n";
+	             $headers .= "Content-type: text/html; charset=iso-8859-1\n";
+	              if( mail($to, $subject, $message, $headers) ){
+		          $message1= "success";
+	              } else {
+		           $message1= "The server failed to send the message. Please try again later.";
+	             }
+            }
+			
+            
+              }    
+         ?>
+		 
+		
   
-  <form method="post" action="mailto:me@my.com?subject=Results">
-
-    <label for="Name">Name:</label><input type="text" name="Name"><br />
-    <label for="Email">Email:</label><input type="text" name="Email"><br />
-    <input type="submit">
-    </form>
-  
-  
-  -->
-  <script>
-function _(id){ return document.getElementById(id); }
-function submitForm(){
-	_("mybtn").disabled = true;
-	_("status").innerHTML = 'please wait ...';
-	var formdata = new FormData();
-	formdata.append( "n", _("n").value );
-	formdata.append( "e", _("e").value );
-	formdata.append( "m", _("m").value );
-	formdata.append( "s", _("s").value );
-	var ajax = new XMLHttpRequest();
-	ajax.open( "POST", "example_parser.php" );
-	ajax.onreadystatechange = function() {
-		if(ajax.readyState == 4 && ajax.status == 200) {
-			if(ajax.responseText == "success"){
-				_("my_form").innerHTML = '<h2>Thanks '+_("n").value+', your message has been sent.</h2>';
-			} else {
-				_("status").innerHTML = ajax.responseText;
-				_("mybtn").disabled = false;
-			}
-		}
-	}
-	ajax.send( formdata );
-}
-</script>
 	   <section class="ftco-section contact-section ftco-no-pb" id="rokon-section">
         <div class="row no-gutters block-9">
           <div class="col-md-6 order-md-last d-flex">
-            <form id="my_form" onsubmit="submitForm(); return false;" class="bg-light p-4 p-md-5 contact-form">
+            <form id="my_form" action="" method="post" class="bg-light p-4 p-md-5 contact-form">
+			  <div class="form-group">
+                 <?php echo $message; ?>
+              </div>
               <div class="form-group">
                 <input type="text" id="n" name="Name" class="form-control" placeholder="Your Name">
               </div>
@@ -635,13 +629,13 @@ function submitForm(){
                 <input type="text" id="e" name="Email" class="form-control" placeholder="Your Email">
               </div>
               <div class="form-group">
-                <input type="text" id="s" name="Results"class="form-control" placeholder="Subject">
+                <input type="text" id="s" name="Subject"class="form-control" placeholder="Subject">
               </div>
               <div class="form-group">
                 <textarea name="" id="m" name="Message" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
               </div>
               <div class="form-group">
-                <input type="submit" id="mybtn" value="Send Message" class="btn btn-primary py-3 px-5">
+                <input type="submit" name="SubmitButton" id="mybtn" value="Send Message" class="btn btn-primary py-3 px-5">
               </div>
             </form>
           
