--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 		          	<div class="text">
 		          		<span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3">I'm a <span>web Developer</span></h1>
-						<h2 class="mb-4">based in Bamgladesh</h2>
+						<h2 class="mb-4">based in Bangladesh</h2>
 			            <p><a href="#rokon-section" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
 		            </div>
 		          </div>
